# -* Makefile *- 
#
# Author : Guillaume Boulant (CSSI)
# Module : KERNEL 
# $Header$
#

include $(top_srcdir)/salome_adm/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================
#


dist_salomeres_DATA=\
	CatalogDataType.xml \
	CatalogResources.xml \
	CatalogModulePersonnel.xml_skel \
	close.png \
	config \
	channel.cfg \
	KERNELCatalog.xml \
	salomeCommonModel.spml \
	SALOMEDS_Resources
