# -* Makefile *- 
#
# Author : Guillaume Boulant (CSSI)
# Module : KERNEL 
# $Header$
#

include $(top_srcdir)/salome_adm/unix/make_common_starter.am

#
# ===============================================================
# Files to be installed
# ===============================================================
#

DEPRECATED_FILES=\
	DEPRECATED/Plugin

dist_salomeres_DATA=\
	CatalogResources.xml \
	config \
	channel.cfg \
	KERNELCatalog.xml \
	SALOMEDS_Resources \
	$(DEPRECATED_FILES)
