# Copyright (C) 2007-2011  CEA/DEN, EDF R&D, OPEN CASCADE
#
# Copyright (C) 2003-2007  OPEN CASCADE, EADS/CCR, LIP6, CEA/DEN,
# CEDRAT, EDF R&D, LEG, PRINCIPIA R&D, BUREAU VERITAS
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#

include $(top_srcdir)/salome_adm/unix/make_common_starter.am

dist_salome_cmake_DATA = \
am2cmake.py \
copytree1.py \
FindBOOST.cmake \
FindCPPUNIT.cmake \
FindDOXYGEN.cmake \
FindHDF5.cmake \
FindKERNEL.cmake \
FindLIBBATCH.cmake \
FindLIBXML2.cmake \
FindMPI.cmake \
FindOMNIORB.cmake \
FindPLATFORM.cmake \
FindPTHREADS.cmake \
FindPYTHON.cmake \
FindSWIG.cmake \
FindSPHINX.cmake \
install_python_from_idl.cmake \
install_and_compile_python_file.cmake

bin_SCRIPTS = prepare_generating_doc.py
